fix building prepare img error: pip3 install setuptools

--- a/make/photon/prepare/Dockerfile
+++ b/make/photon/prepare/Dockerfile
@@ -8,6 +8,7 @@ RUN mkdir -p /harbor_make
 
 RUN tdnf install -y python3 \
     && tdnf install -y python3-pip
+RUN pip3 install --upgrade setuptools
 RUN pip3 install pipenv==2018.11.26
 
 COPY make/photon/prepare /usr/src/app
